DisplayColumn refactor